<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".tab.LoginFragment">

        <ImageView
            android:id="@+id/login_img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marge_72"
            android:layout_marginEnd="@dimen/marge_72"
            android:paddingTop="@dimen/marge_72"
            android:src="@drawable/logo_epharma"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="@dimen/text_size_26"
            android:textStyle="bold"
            android:fontFamily="@font/gravitas_one_regular"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_img_logo" />

        <TextView
            android:id="@+id/login_ind_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_indicate_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text" />


        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marge_16"
            android:layout_marginTop="@dimen/marge_24"
            android:text="@string/email_text"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_12"
            android:fontFamily="@font/gravitas_one_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_ind_text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marge_16"
            android:hint="@string/email_hint_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_label" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marge_16"
            android:layout_marginTop="@dimen/marge_16"
            android:text="@string/password_text"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_12"
            android:fontFamily="@font/gravitas_one_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marge_16"
            android:hint="@string/password_hint_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16"

            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_label" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/view_size_35"
            android:layout_height="@dimen/view_size_35"
            android:layout_marginTop="@dimen/marge_64"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"/>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marge_72"
            android:layout_marginEnd="@dimen/marge_72"
            android:text="@string/login_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar" />

        <TextView
            android:id="@+id/login_forgot_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_id"
            android:layout_marginTop="@dimen/marge_12"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="@dimen/view_size_35"
            android:layout_height="@dimen/view_size_35"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/swipeRight"/>

        <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/text_swipe_right"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
