<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:elevation="8dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img_list"
                android:layout_width="67dp"
                android:layout_height="62dp"
                android:src="@drawable/img_medicament"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteX="@dimen/marge_12"
                tools:layout_editor_absoluteY="10dp" />

            <View
                android:id="@+id/status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:background="@drawable/circle_synched"
                android:layout_width="10dp"
                android:layout_height="10dp"
                />

            <TextView
                android:id="@+id/name_label"
                android:layout_marginEnd="@dimen/marge_8"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintVertical_weight="1"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                android:text="@string/nom_medicament"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/img_list"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/name"
                app:layout_constraintTop_toBottomOf="@id/name_label"
                app:layout_constraintStart_toStartOf="@id/name_label"
                app:layout_constraintEnd_toEndOf="@id/name_label"
                android:text="Amikacine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/sep3"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintEnd_toEndOf="@id/status"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                />

            <TextView
                android:id="@+id/form_label"
                android:layout_marginEnd="@dimen/marge_8"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintVertical_weight="1"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                android:text="@string/forme_medicament"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/img_list"
                app:layout_constraintTop_toBottomOf="@id/sep3"
                />
            <TextView
                android:id="@+id/form"
                app:layout_constraintTop_toBottomOf="@id/form_label"
                app:layout_constraintStart_toStartOf="@id/form_label"
                app:layout_constraintEnd_toEndOf="@id/name_label"
                android:text="Amikacine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/dosage_label"
                android:layout_marginStart="@dimen/marge_8"
                app:layout_constraintVertical_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_label"
                android:text="@string/dosage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/dosage"
                app:layout_constraintTop_toBottomOf="@id/dosage_label"
                app:layout_constraintStart_toStartOf="@id/dosage_label"
                app:layout_constraintEnd_toEndOf="@id/dosage_label"
                android:text="1 g"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

<!--            <View-->
<!--                android:id="@+id/sep1"-->
<!--                app:layout_constraintTop_toBottomOf="@id/name"-->
<!--                app:layout_constraintStart_toStartOf="@id/name"-->
<!--                app:layout_constraintEnd_toEndOf="@id/name"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/colorAccent"-->
<!--                />-->

<!--            <View-->
<!--                app:layout_constraintTop_toBottomOf="@id/dosage"-->
<!--                app:layout_constraintStart_toStartOf="@id/dosage"-->
<!--                app:layout_constraintEnd_toEndOf="@id/dosage"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/colorAccent"-->
<!--                />-->
<!--            <TextView-->
<!--                android:textColor="@color/colorPrimaryDark"-->
<!--                android:textSize="@dimen/text_size_12"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintTop_toBottomOf="@id/sep1"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                android:id="@+id/description_label"-->
<!--                android:text="@string/forme"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"/>-->
<!--            <TextView-->
<!--                app:layout_constraintTop_toBottomOf="@id/description_label"-->
<!--                app:layout_constraintStart_toStartOf="@id/description_label"-->
<!--                app:layout_constraintEnd_toEndOf="@id/description_label"-->

<!--                android:text="Amiklin"-->
<!--                android:id="@+id/description"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"/>-->

<!--            <TextView-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:textColor="@color/colorPrimary"-->
<!--                android:textSize="10sp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/sep3"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                android:id="@+id/date"-->
<!--                android:text="20/10/2001"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"/>-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>